# mc-insta-images

./: .gitignore  Insta Image API.postman_collection.json  README.md  docker-compose.yml  pyproject.toml
.scripts/: create_api_dev.sh  create_api_prod.sh  deploy_lambda_dev.sh  deploy_lambda_prod.sh  start_and_setup_localstack.sh
src/: run.py
src/insta_images/handlers/: delete.py  search.py  update.py  upload.py  view.py
src/insta_images/services/: dynamodb_service.py  image_service.py  models.py  s3_service.py  validation_service.py
src/insta_images/utils/: app_init.py  config.py  constants.py  exceptions.py  helpers.py  logger.py  schema.py
src/resources/: .env.common  .env.dev  .env.prod  .env.staging  image_upload_schema.json  images_table.json  s3_lifecycle.json  schema.json
tests/: conftest.py  test_archive.py  test_delete.py  test_list.py  test_view.py
